@@ -90,9 +90,9 @@
 		/** Enum for the different types of HID reports. */
 		enum HID_ReportItemTypes_t
 		{
-			REPORT_ITEM_TYPE_In                   = 1, /**< Indicates that the item is an IN report type. */
-			REPORT_ITEM_TYPE_Out                  = 2, /**< Indicates that the item is an OUT report type. */
-			REPORT_ITEM_TYPE_Feature              = 3, /**< Indicates that the item is a FEATURE report type. */
+			REPORT_ITEM_TYPE_In                   = 0, /**< Indicates that the item is an IN report type. */
+			REPORT_ITEM_TYPE_Out                  = 1, /**< Indicates that the item is an OUT report type. */
+			REPORT_ITEM_TYPE_Feature              = 2, /**< Indicates that the item is a FEATURE report type. */
 		};
 
 		/** Type define for the HID class specific HID descriptor, to describe the HID device's specifications. Refer to the HID
